--- a/src/components/StepForm/formstyles.css
+++ b/src/components/StepForm/formstyles.css
@@ -25,6 +25,7 @@ input {
 }
 @media screen and (max-width: 769px) {
   .toggle-div {
+    justify-content: space-between;
     flex-grow: 1;
     width: 100%;
   }
