--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,31 +1,32 @@
 .Home .lander {
-	padding: 80px 0;
-	text-align: center;
+  padding: 80px 0;
+  text-align: center;
 }
 
 .Home .lander h1 {
-	font-family: "Open Sans", sans-serif;
-	font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
 }
 body {
-	background-color: rgb(250, 250, 250) !important;
+  background-color: rgb(250, 250, 250) !important;
+  margin-top: -70px !important;
 }
 .logo-size-hotfix {
-	width: 7em !important;
-	-webkit-filter: drop-shadow(5px 5px 10px #505050);
-	filter: drop-shadow(5px 5px 10px #505050);
+  width: 7em !important;
+  -webkit-filter: drop-shadow(5px 5px 10px #505050);
+  filter: drop-shadow(5px 5px 10px #505050);
 }
 .masthead {
-	display: flex;
-	align-items: center;
-	background-image: linear-gradient(
-		135deg,
-		rgb(7, 144, 207) 15%,
-		rgb(0, 119, 255) 50%,
-		rgb(24, 53, 168) 85%
-	) !important;
-	height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: linear-gradient(
+    135deg,
+    rgb(7, 144, 207) 15%,
+    rgb(0, 119, 255) 50%,
+    rgb(24, 53, 168) 85%
+  ) !important;
+  height: 100vh;
 }
 .ytp-scroll-min.ytp-pause-overlay {
-	display: none !important;
+  display: none !important;
 }
